<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DDFBF0" >

    <TextView
        android:id="@+id/tituloDireccion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/direccion"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#2B605B" />
    
    <fragment
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:map="http://schemas.android.com/apk/res-auto"
        android:id="@+id/map"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/textDireccion"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/tituloDireccion"
        class="com.google.android.gms.maps.SupportMapFragment" />

    <TextView
        android:id="@+id/textTelefono"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignTop="@+id/textDireccion"
        android:layout_marginTop="18dp"
        android:text="@string/telefonoLocal"
        android:textColor="#40938C" />

    <TextView
        android:id="@+id/textFax"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textTelefono"
        android:text="@string/fax"
        android:textColor="#40938C" />

    <TextView
        android:id="@+id/textMovil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textFax"
        android:text="@string/movil"
        android:textColor="#40938C" />

    <TextView
        android:id="@+id/textEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textMovil"
        android:text="@string/email"
        android:textColor="#40938C" />

    <TextView
        android:id="@+id/textWeb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textEmail"
        android:text="@string/web"
        android:textColor="#40938C" />

    <TextView
        android:id="@+id/textDireccion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="158dp"
        android:text="@string/direcLocal"
        android:textColor="#40938C" />

</RelativeLayout>